react-app/src/components/MonthView/DayTile/EventItem/EventDetail/EventDetail.module.css
.wrapper {
    position: absolute;

    border-radius: 0.5rem;
    background-color: white;
    box-shadow: 0px 0px 0.5rem rgba(0, 0, 0, 0.3);

    font-size: 0.8rem;
    padding: 1rem 1.5rem;
    min-width: 25rem;
    max-width: 25rem;
}

.wrapper i {
    margin-right: 0.5rem;
}

.title {
    font-size: 1rem;
    font-weight: 500;
    margin-bottom: 0.5rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.datetime {
    display: flex;
    align-items: center;
    margin: 0 0 0.5rem 1.5rem;
}

.datetime i {
    font-size: 0.2rem;
    margin: 0 0.5rem;

}

.address {
    margin-bottom: 0.5rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.description {
    margin-bottom: 0.5rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.calendar {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

